fix more alignment issues. Add new summary

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,6 @@ p b{
 }
 
 table.center {
-    margin-left:auto;
+    margin-left:25%;
     margin-right:auto;
 }
